# bloom

./: README.md  bloom-er.mwb  iniciar_bd.sql
bloom-api/: .env.example  .gitignore  README.md  main.py  pyproject.toml
bloom-api/api/: resposta_padrao.py
bloom-api/api/middlewares/: CurrentUser.py
bloom-api/api/v1/: artigos.py  auth.py  check_status.py  consultas.py  exames.py  middlewares.py  plano_pre_natal.py  relatorio.py  vacinas.py
bloom-api/auth/: AuthService.py
bloom-api/controllers/: ControladorArtigo.py  ControladorConsulta.py  ControladorExame.py  ControladorGestante.py  ControladorProfissional.py  ControladorRelatorio.py  ControladorUsuario.py  ControladorVacina.py
bloom-api/controllers/dto/: ArtigoDTO.py  ConsultaDto.py  ExameDto.py  FiltroConsultaDTO.py  GestanteDto.py  ItemPlanoPreNatalDTO.py  ProfissionalDto.py  UsuarioDTO.py  VacinaDto.py
bloom-api/data/: plano_pre_natal.csv
bloom-api/domain/: FiltroEventoAgenda.py
bloom-api/domain/contracts/: Documento.py
bloom-api/domain/entities/: Artigo.py  CalculadoraGestacional.py  Consulta.py  EventoAgenda.py  Exame.py  Gestante.py  PlanoPreNatal.py  Profissional.py  Relatorio.py  Usuario.py  Vacina.py  entidade_usuario.py
bloom-api/domain/enums/: EspecialidadesMedicas.py  TiposDocumento.py  TiposRelatorio.py  UsuarioPerfil.py
bloom-api/logs/: app.log.2025-09-07
bloom-api/repositories/: repositorio_usuario.py
bloom-api/scripts/: inserir_dados_testes_db.py  inserir_plano_pre_natal_db.py
bloom-api/templates/: relatorio.html
bloom-api/tests/: insercao_dados_testes_db.py
(+124 files in other folders)
