[tool.poetry]
name = "bloom-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
uvicorn = "^0.35.0"
fastapi = "^0.116.1"
colorlog = "^6.9.0"
psycopg2 = "^2.9.10"
python-dotenv = "^1.1.1"
python-jose = {extras = ["bcrypt"], version = "^3.5.0"}
passlib = "^1.7.4"
bcrypt = "4.0.1"
pydantic = {extras = ["email"], version = "^2.11.7"}
xhtml2pdf = "^0.2.17"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
